--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -31,7 +31,19 @@ body {
     width: 100%;
     height: 100%;
     display: block;
-    background: #231F20;
+    background:
+
+{
+
+{
+
+{
+    BACKGROUND_COLOR
+}
+
+}
+}
+;
 }
 
 #loading-cover {
@@ -62,10 +74,10 @@ body {
     margin-bottom: 20px;
 }
 
-#unity-logo img {
-    max-width: 100%;
-    height: auto;
-}
+    #unity-logo img {
+        max-width: 100%;
+        height: auto;
+    }
 
 #unity-progress-bar-empty {
     width: 80%;
